[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "firm_growth_reg"
version = "0.0.2"
description = ""
authors = [
  { name = "Leo Liu", email = "leo.liu@unsw.edu.au" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "matplotlib",
    "linearmodels",
    "scipy",
    "pandas",
    "icecream",
    "loguru",
    "latex_table @ git+https://github.com/leoliu0/latex_table@master",
]

[tool.setuptools]
packages = ["firm_growth_reg"]
