[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "firm_growth"
version = "0.1"
description = ""
authors = [
  { name = "Leo Liu", email = "leo.liu@unsw.edu.au" },
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "matplotlib",
    "linearmodels",
    "scipy",
    "pandas",
    "icecream",
    "loguru",
]

[tool.setuptools]
packages = ["firm_growth_reg"]
